--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -9,10 +9,9 @@
     <title>Guidion</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/institute/rewards.css">
-     <link rel="stylesheet" href="/css/institute/Lect_detail.css">
-    <link rel="stylesheet" href="/css/institute/sidebar.css">
- 
+
+     <!-- <link rel="stylesheet" href="/css/institute/Lect_detail.css"> -->
+    
      
         
     <link rel="preconnect" href="https://fonts.googleapis.com">
