--- a/views/users/institute-login.ejs
+++ b/views/users/institute-login.ejs
@@ -14,7 +14,7 @@
       <p>Welcome back! Sign in to Guidion</p>
     </div>
 
-    <form action="/reward" method="GET">
+    <form action="/schedule" method="GET">
       <label>Email Address</label>
       <input type="email" name="email" placeholder="admin@institute.edu" required>
       
